# pybend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_pre.md  Universal Context Protocol.md  __init__.py  database.db  pybend.py  pyproject.toml  requirements.txt
api/: routes.py
core/: __init__.py
core/api/: __init__.py  routes.py
core/models/: __init__.py  product_model.py  storable_mixin.py  user_model.py  viewable_mixin.py
core/storage/: __init__.py  json_storage.py
core/utils/: __init__.py  decorators.py  registrar.py
pybend.egg-info/: PKG-INFO  SOURCES.txt
src/pybend/: __init__.py  pybend.db
src/pybend/core/: __init__.py  config.py  main.py
src/pybend/core/api/: backend.py  routes.py  routes_fastapi.py  routes_flask.py
src/pybend/core/models/: comment_model.py  product_model.py  proto_model.py  storable_mixin.py  user_model.py  viewable_mixin.py
src/pybend/core/storage/: sqlite_storage.py
src/pybend/core/swagger/: swagger_setup.py
src/pybend/core/utils/: introspection.py  registrar.py
src/pybend/static/: README-NTT-CORE.md  item.js  table.js
src/pybend/static/NTT0.0/: index.html  list.js  schema.html
src/pybend/static/NTT0.1/: Event.js  NTT.js  NTTBroker.js  NTTFunctional.js  NTTObserver.js  NTTRegistry.js  NTTUtils.js  TransportManager.js  index.html
src/pybend/static/NTT0.2/: EntityRegistry.js  Event.js  HTTP.js  NTT.js  NTTFunctional.js  NTTReactive.js  NTTUtils.js  Socket.js  TransportManager.js  example.html  (+10 more)
storage/: abstract_storage.py  sqlite_storage.py
tests/: conftest.py  test_api.py  test_models.py  test_storage.py
(+47 files in other folders)
